small data fixes && findaperson feature completed(needs UI spacing on cards) && switching search to be able to ignore upper vs. lower case && find solutions that match first and last names

--- a/client/src/components/css/FindaPersonHero.css
+++ b/client/src/components/css/FindaPersonHero.css
@@ -1,6 +1,6 @@
 .find-hero-main {
 	background: var(--bg-accent);
-	height: 75vh;
+	min-height: 75vh;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
@@ -73,4 +73,59 @@
 
 .fa {
 	color: inherit;
+}
+
+.find-hero-display-results {
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	padding-top: 3em;
+	padding-bottom: 3em;
+}
+
+.find-hero-results-title {
+	font-size: 1.4em;
+	color: var(--text-color);
+	padding-bottom: 1.7em;
+}
+
+.find-hero-cards-wrapper {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-basis: 20vh;
+}
+
+.find-hero-card {
+	background-color: var(--accent-color);
+	border-radius: 15px 15px 15px 15px;
+	box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.5);
+	width: 18vw;
+	padding: 1em;
+	color: var(--text-color);
+}
+
+@media screen and (max-width: 1130px) {
+	.find-hero-card {
+		width: 25vw;
+	}
+}
+
+@media screen and (max-width: 1025px) {
+	.find-hero-card {
+		width: 25vw;
+	}
+}
+
+@media screen and (max-width: 414px) {
+	.find-hero-card {
+		width: 35vw;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.find-hero-card {
+		width: 55vw;
+	}
 }
